test_suite/tests/errors/unknown_transition_target_max_entry.rs
use banish::banish;

fn main() {
    banish! {
        #[max_entry = 1 => @nowhere]
        @foo
            step? { return; }
    }
}
