test_suite/tests/errors/unknown_transition_target_max_entry.stderr
error: Unknown state `nowhere`
 --> tests/errors/unknown_transition_target_max_entry.rs:5:29
  |
5 |         #[max_entry = 1 => @nowhere]
  |                             ^^^^^^^
